--- a/college2/styles/style.css
+++ b/college2/styles/style.css
@@ -214,3 +214,8 @@ footer a:hover {
 .crc_list{
     width: 520px;
 }
+@media (max-width: 767px) {
+    .branding{
+        display: none;
+    }
+}
